fixed relay requst body
