# internal/services/server.go
@@ -51,22 +51,27 @@ func (s *ServerImpl) Run() error {
 var _ types.ServiceServer = &ServerImpl{}
 
 func (s *ServerImpl) Relay(ctx context.Context, req *types.MsgRelayRequest) (*types.MsgRelayResponse, error) {
-	s.log.Infof("Relay request: state - %s; chain - %s", req.State, req.Chain)
-	tx, err := s.relayer.Relay(ctx, req.State, req.Chain)
+	if req.Body == nil {
+		return nil, status.Errorf(codes.InvalidArgument, "empty body")
+	}
+
+	s.log.Infof("Relay request: state - %s; chain - %s", req.Body.State, req.Body.Chain)
+
+	tx, err := s.relayer.Relay(ctx, req.Body.State, req.Body.Chain)
 
 	if err != nil {
+		s.log.WithError(err).Debugf("Request failed")
+
 		switch errors.Cause(err) {
 		case relayer.ErrEntryNotFound, relayer.ErrChainNotFound:
-			s.log.WithError(err).Debugf("request failed")
 			return nil, status.Errorf(codes.NotFound, err.Error())
 		case relayer.ErrAlreadySubmitted:
-			s.log.WithError(err).Debugf("request failed")
 			return nil, status.Errorf(
 				codes.InvalidArgument,
-				"can not resubmit state transition tx for state: %s on chain: %s", req.State, req.Chain,
+				"can not resubmit state transition tx for state: %s on chain: %s", req.Body.State, req.Body.Chain,
 			)
 		default:
-			s.log.WithError(err).Error("got internal error while processing relay request")
+			s.log.WithError(err).Error("Got internal error while processing relay request")
 			return nil, status.Errorf(codes.Internal, "Internal error")
 		}
 	}
